# EE_674

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml
autopilot/: CMakeLists.txt  package.xml
autopilot/include/autopilot/: autopilot.hpp  pid.hpp  transferfunction.hpp  yawdamper.hpp
autopilot/src/: autopilot.cpp  autopilot_node.cpp  pid.cpp
estimator/: CMakeLists.txt  package.xml
estimator/include/estimator/: alphafilter.hpp  attitude_ekf.hpp  observer.hpp  position_ekf.hpp
estimator/src/: attitude_ekf.cpp  observer.cpp  observer_node.cpp  position_ekf.cpp
icons/: icons.qrc
include/: controller.hpp  controllernode.hpp  drone.hpp  dronenode.hpp  droneupdatecallback.hpp  mainwindow.hpp  osgwidget.hpp  types.hpp
include/mav/: dronenode.hpp  mainwindow.hpp  osgwidget.hpp
libs/dynamics/: CMakeLists.txt
libs/dynamics/include/: drone.hpp
libs/dynamics/src/: controller.cpp  dynamics_unittests.cpp
new_plotter/: CMakeLists.txt  README.md
new_plotter/src/uav_plotter/: Plotter.py
new_plotter/test/: advanced_test.py
path_follower/: CMakeLists.txt  package.xml
path_follower/include/path_follower/: pathfollower.hpp
path_follower/src/: pathfollower.cpp  pathfollower_node.cpp
path_manager/: CMakeLists.txt  package.xml
path_manager/include/path_manager/: dubinsparams.hpp  pathmanager.hpp
path_manager/src/: pathmanager.cpp  pathmanager_node.cpp
path_planner/: CMakeLists.txt  package.xml
path_planner/include/path_planner/: pathplanner.hpp
path_planner/src/: pathplanner.cpp  pathplanner_node.cpp
plotter/: package.xml
plotter/nodes/: plotter.py
plotter/src/uav_plotter/: plotter_args.py  state_plotbox.py
plotter/test/: test_plotting.py
src/: controller.cpp  controllernode.cpp  drone.cpp  dronenode.cpp  droneupdatecallback.cpp  main.cpp  mainwindow.cpp  osgwidget.cpp
src/mav/: dronenode.cpp  droneupdatecallback.cpp  main.cpp  mainwindow.cpp  osgwidget.cpp
uav_msgs/: CMakeLists.txt  package.xml
uav_msgs/msg/: Building.msg  Command.msg  Delta.msg  Map.msg  Path.msg  Sensors.msg  State.msg  Status.msg  Waypoint.msg  WaypointArray.msg
uav_sim/: CMakeLists.txt  package.xml
uav_sim/include/uav_sim/: dronenode.hpp  droneupdatecallback.hpp  mainwindow.hpp  osgwidget.hpp
uav_sim/launch/: sim.launch
uav_sim/src/: dronenode.cpp  dronenode.cpp.autosave  droneupdatecallback.cpp  main.cpp  mainwindow.cpp  osgwidget.cpp
uav_sim/ui/: mainwindow.ui
ui/: mainwindow.ui
