<?xml version="1.0"?>
<package>
  <name>fixedwing_sim</name>
  <version>0.1.0</version>
  <description>

     fixedwing_sim

  </description>
  <maintainer email="mhaskell9@gmail.com">Mat Haskell</maintainer>
  <author>Mat Haskell</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>libqt5-dev</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>libqt5-dev</run_depend>

 
</package>
