<?xml version="1.0"?>
<package format="2">
  <name>uav_msgs</name>
  <version>1.0.0</version>
  <description>Message and service definitions for the uav_sim</description>

  <maintainer email="m.haskell9@gmail.com">Mat Haskell</maintainer>

  <author email="m.haskell9@gmail.com">Mat Haskell</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
